switch to knotification system for displaying fileopen errors. this way they in particular can be disabled via systemsettings

BUG: 250211


svn path=/trunk/KDE/kdesdk/lokalize/; revision=1227957