src/mergemode/mergeview.cpp
@@ -34,6 +34,7 @@
 #include <kurl.h>
 #include <kfiledialog.h>
 #include <kmessagebox.h>
+#include <knotification.h>
 #include <ktextedit.h>
 #include <kaction.h>
 #include <threadweaver/ThreadWeaver.h>
@@ -231,8 +232,12 @@ void MergeView::mergeOpen(KUrl url)
         if (errorLine>0)
             KMessageBox::error(this, i18nc("@info","Error opening the file <filename>%1</filename> for synchronization, error line: %2",url.pathOrUrl(),errorLine) );
         else
-            KMessageBox::error(this, i18nc("@info","Error opening the file <filename>%1</filename> for synchronization",url.pathOrUrl()) );
-
+        {
+            KNotification* notification=new KNotification("MergeFilesOpenError", this);
+            notification->setText( i18nc("@info %1 is full filename","Error opening the file <filename>%1</filename> for synchronization",url.pathOrUrl()) );
+            notification->sendEvent();
+        }
+        //i18nc("@info %1 is w/o path","No branch counterpart for <filename>%1</filename>",url.fileName()),
     }
 
 }
